[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-libero-pro"
version = "0.1.4"
description = "LIBERO-Pro: Towards Robust and Fair Evaluation of Vision-Language-Action Models Beyond Memorization"
authors = [
    { name = "Xueyang Zhou" }, 
    { name = "Yangming Xu" }, 
    { name = "Guiyao Tie" }, 
    { name = "Yongchao Chen" },
    { name = "Guowen Zhang" }, 
    { name = "Duanfeng Chu" }, 
    { name = "Pan Zhou" }, 
    { name = "Lichao Sun" },

]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "egl-probe",

    # core runtime / reproducible pins
    "hydra-core>=1.2,<1.4",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "bddl==1.0.1",

    # common libs
    "numpy",
    "pyyaml",
    "transformers",
    "easydict",
    "einops",
    "thop",
    "matplotlib>=3.5.3",
    "cloudpickle>=2.0.0",
    "opencv-python",
    "wandb",

    # gym: compatible range
    "gymnasium>=0.29.0",
    "mujoco>=3.0.0",
    "future>=0.18.2",
]

[project.urls]
Homepage = "https://github.com/Zxy-MLlab/LIBERO-PRO"
Issues = "https://github.com/Zxy-MLlab/LIBERO-PRO/issues"
